chore: Update App.css to add custom scrollbar styles and fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -29,5 +29,23 @@ a{
   flex: 1;
   padding: 0 5%;
   margin: 0 auto;
-  max-width: 1280px;
+  min-height: 100vh;
+  overflow: scroll;
+}
+
+.container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.container::-webkit-scrollbar-thumb {
+  background-color: var(--color--primary);
+  border-radius: 10px;
+}
+
+.container::-webkit-scrollbar-track {
+  background-color: var(--color--secondary);
+}
+
+.container {
+  overflow-x: hidden;
 }
